<resources>
    <string name="app_name">Datos Telefono Reingenieria</string>
    <string name="tvVersionAndroidLb">1. Version Android:</string>
    <string name="tvVersionAndroid"></string>
    <string name="tvBlueT">2. Bluetooth:</string>
    <string name="btnOn">On</string>
    <string name="btnOff">Off</string>
    <string name="tvLevelBaterry">3. Level of Baterry:</string>
    <string name="tvStorage">4. Storage:</string>
    <string name="etNameFile">Name of File</string>
    <string name="btnSaveFile">Save</string>
    <string name="tvState">5. Conection:</string>
    <string name="tvInternet">6. Internet:</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView2</string>
    <string name="textview3">TextView3</string>
    <string name="informaci_n_telefono">Información Telefono</string>
    <string name="nombre_archivo">Nombre Archivo</string>
</resources>